--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -123,7 +123,7 @@
   width:100%;
 
   .p-dataview{
-    height:100%;
+    height:calc(100% - 20px);
     width:100%;
 
     .p-dataview-content{
@@ -132,8 +132,11 @@
 
       .grid{
         width:100%;
-        max-height:100%;
+        max-height:calc(100% + 20px);
         overflow-y:auto;
+        .dgb-0:last-child{
+          margin-bottom:40px;
+        }
         .dgb-0{
           
           .dgb-0-txt{
