--- a/src/style/LightBox.scss
+++ b/src/style/LightBox.scss
@@ -36,6 +36,7 @@ background: none !important;
         height:100%;
         max-height: calc(100% - 32px);
 
+
         .VuePdfApp{
           max-width: 100%;
           max-height: 100%;
@@ -55,7 +56,7 @@ background: none !important;
           img {
           position:relative;
           max-width: 100%;
-          max-height: 100%;
+          max-height: calc(100% - 10px);
           width: 100%;
           height: calc(100%);
           object-fit: contain;
@@ -109,3 +110,18 @@ background: none !important;
   }
 }
 
+
+.txt{
+    height: calc(100% - 57px);
+  div{
+   height:inherit;
+  .tiptap{
+    margin:25px;
+   height:100%;
+   p{
+    margin:0;
+    white-space:pre-wrap;
+   }
+  }
+}
+}
