session storage now pinia, typescript

--- a/src/style/Canvas.scss
+++ b/src/style/Canvas.scss
@@ -1,8 +1,9 @@
 
 @import "./ThemeModes";
 .three{
-  width:100%!important;
+  width:calc(100%-1px)!important;
   border-bottom: $tableBorder;
+  border-right: $tableBorder;
   height:80px!important;
   canvas {
     max-width: 450px!important;
