--- a/src/style/Content.scss
+++ b/src/style/Content.scss
@@ -44,7 +44,7 @@
         height:100%;
         justify-content: flex-start;
         align-content: flex-start;
-        max-height:calc(100% - 19px);
+        max-height:calc(100%);
         overflow-y:auto;
 
        // list 
@@ -132,7 +132,10 @@
 }
 .dataView{
   height:100%;
-  width:100%;
+  width:calc(100% - 1px);
+
+        border-top: 1px solid var(--border-primary);
+          border-right: $tableBorder;
 
   .p-dataview{
     height:calc(100% - 20px);
@@ -143,6 +146,7 @@
       width:100%;
 
       .grid{
+
         width:100%;
         max-height:calc(100% + 20px);
         overflow-y:auto;
@@ -169,15 +173,12 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-
-
             }
           }
 
           // border-left: 120px solid transparent;
           // border-right: 120px solid transparent;
           border-bottom: $tableBorder;
-          border-right: $tableBorder;
           width:100%;
           min-width:90px;
           margin:0;
