--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -33,15 +33,12 @@ html, body {
     border-top: 1px solid var(--border-secondary);
     position: relative;
       nav{
-
         background-color: var(--background-primary);
         position: relative;
-        z-index:3!important;
         display:flex;
         width:100%;
         height:$navH;
         padding-left:1px;
-        border-bottom: 1px solid var(--border-primary);
         overflow-y:hidden;
 
         .navItem{
@@ -74,7 +71,7 @@ html, body {
           flex-grow:1;
           border:0;
           background-color: rgba(0,0,0,0);
-          width:300px;
+          min-width:20px;
           outline:0;
         }
       }
@@ -91,7 +88,7 @@ html, body {
       .contentMain {
         position:absolute;
         width:100%;
-        height:unquote("calc( 100% - #{$border})");
+        height:100%;
       }
       a:link {
         color:  var(--link)
@@ -101,6 +98,7 @@ html, body {
       }
     }
 }
+
 :root {
     --sat: env(safe-area-inset-top);
     --sar: env(safe-area-inset-right);
