--- a/src/style/DataView.scss
+++ b/src/style/DataView.scss
@@ -11,7 +11,7 @@
   border-right: $tableBorder;
 
   .p-dataview{
-    height:calc(100% - 20px);
+    height:calc(100%);
     width:100%;
 
     .p-dataview-content{
@@ -19,16 +19,16 @@
       width:100%;
 
       .grid{
-
         width:100%;
-        max-height:calc(100% + 20px);
+        max-height:calc(100% );
         overflow-y:auto;
+        overflow-x:hidden;
+
         .dgb-0:last-child{
           margin-bottom:40px;
         }
         .dgb-0{
           .dgb-0-txt{
-
             cursor: pointer;
             width:100%;
             height:100%;
@@ -66,6 +66,9 @@
 }
 .header{
   border-bottom: $tableBorder;
+  a{
+    color: var(--link);
+  }
 }
 .grid {
     display: flex;
