--- a/src/style/MixtapeView.scss
+++ b/src/style/MixtapeView.scss
@@ -5,13 +5,13 @@
   to {opacity: 1;}
 }
 .mixtapeView{
-  height:100%;
+  height:calc(100%);
   width:calc(100% - 1px);
   border-top: 1px solid var(--border-primary);
   border-right: $tableBorder;
 
   .p-dataview{
-    height:calc(100% - 20px);
+    height:calc(100%);
     width:100%;
 
     .p-dataview-content{
@@ -21,8 +21,10 @@
       .grid{
 
         width:100%;
-        max-height:calc(100% + 20px);
+        max-height:calc(100% - 16px);
         overflow-y:auto;
+        overflow-x:hidden;
+
         .dgb-0:last-child{
           margin-bottom:40px;
         }
@@ -31,18 +33,15 @@
           background: rgba(255, 255, 255, 0.05);
           backdrop-filter: blur(5px);
           cursor: pointer;
-          height:30px;
-
-          // border-left: 120px solid transparent;
-          // border-right: 120px solid transparent;
+          height:34px;
+          overflow:hidden;
           border-bottom: $tableBorder;
           width:100%;
           min-width:90px;
           margin:0;
-          margin-top:3px;
           white-space: nowrap;
-          .dgb-0-txt{
 
+          .dgb-0-txt{
             cursor: pointer;
             width:100%;
             padding:0;
@@ -52,15 +51,14 @@
             background:none;
 
             a{
-            color:var(--link-visited);
-            font-size:1em;
-            text-align:left;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+              color:var(--link-visited);
+              font-size:1em;
+              text-align:left;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
             }
           }
-
         }
       }
     }
