--- a/src/style/WebKit.scss
+++ b/src/style/WebKit.scss
@@ -4,6 +4,8 @@
 }
 *::-webkit-scrollbar-track {
   box-shadow: inset 0 0 8px rgba(40,40,40,0.9);
+
+  border-left: $tableBorder;
 }
 *::-webkit-scrollbar-thumb {
   background-color: var(--border-primary);
