--- a/src/style/Canvas.scss
+++ b/src/style/Canvas.scss
@@ -1,15 +1,22 @@
-
 @import "./ThemeModes";
-.three{
-  max-width:calc(100%-1px)!important;
-  border-bottom: $tableBorder;
-  border-right: $tableBorder;
-  height:250px!important;
-  canvas {
 
+.three{
+  max-width:calc(100% - 1px)!important;
+  height:250px!important;
+    border-bottom: 1px solid var(--border-secondary);
+
+    border-right: 1px solid var(--border-secondary);
+  .scene-container {
+top:0px;
   max-width:calc(100%)!important;
-    max-height: 80px;
-    height:80px!important;
+    width:100%;
+    max-width:100%;
+    max-height: 246px;
+    height:100%!important;
   } 
+  canvas{
+    max-height:250px!important;
+    max-width:100%!important;
+  }
 }
 
