--- a/src/style/Canvas.scss
+++ b/src/style/Canvas.scss
@@ -1,19 +1,51 @@
+
 @import "./ThemeModes";
-
 .three{
-  max-width:calc(100% - 1px)!important;
-  height:250px!important;
-  border-bottom: 1px solid var(--border-secondary);
-  border-right: 1px solid var(--border-secondary);
+  width:calc(100% - 1px)!important;
+  border-right: $tableBorder;
+  border-bottom: $tableBorder;
+  height:80px!important;
+  canvas {
+    width: 450px!important;
+    max-height: 80px;
+    height:80px!important;
+  } 
+}
 
+.forceGraph{
+  max-width:calc(100% - 1px)!important;
+  height:100%!important;
+  max-height:100%;
+  border-top: 1px solid var(--border-secondary);
+  border-right: 1px solid var(--border-secondary);
+  div{ 
+  position:inherit;
+  }
   .scene-container {
     max-width:calc(100%)!important;
     width:100%;
-    max-height: 246px!important;
   } 
   canvas{
-    max-height:250px!important;
+    max-height:100%!important;
     max-width:100%!important;
+  }
+}
+.fg{
+  height:100%; 
+  *{
+    height:calc(100% - 42px); 
+  }
+  .scene-tooltip{
+    height:0px!important;
+  }
+  .scene-nav-info{
+    height:0px!important;
+  }
+}
+div.fg div:first-child{
+  max-height:100%!important;
+  .scene-container{
+    max-height:100px;
   }
 }
 
