forcegraph tweaks. brought bake three.js navigation

--- a/src/style/ContentView.scss
+++ b/src/style/ContentView.scss
@@ -122,6 +122,9 @@
               border-top: $tableBorder;
               overflow:hidden;
               white-space: nowrap;
+              .file_path{
+              color:var(--text-descr);
+            }
             }
           }
         }
