--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -4,8 +4,8 @@ $dropDownBorder: 3px solid var(--border-primary);
 
 
 $navH:40px;
-$devH:100dvh;
-$devW:100dvw;
+$devH:100vh;
+$devW:100vw;
 
 $iosTop: env(safe-area-inset-top, 0px);
 $border: 21px;
