--- a/src/style/Canvas.scss
+++ b/src/style/Canvas.scss
@@ -17,6 +17,7 @@
   height:100%!important;
   max-height:100%;
   border-top: 1px solid var(--border-secondary);
+  border-left: 1px solid var(--border-secondary);
   border-right: 1px solid var(--border-secondary);
   div{ 
   position:inherit;
