--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -3,6 +3,7 @@
   --link: rgba(194, 194, 73, 0.973);
   --link-visited: #aae574;
   --text-primary: #dfdfdfd3;
+  --text-descr: rgba(223, 223, 223, 0.7);
   --color-scheme: dark;
   --border-primary: #676776;
   --border-secondary: #696967;
@@ -14,6 +15,7 @@
   --link: #000;
   --link-visited: #000;
   --text-primary: #000;
+  --text-descr: rgba(3, 3, 3, 0.7);
   --text-secondary: #516076;
   --color-scheme: light;
   --border-primary: #535353;
