--- a/src/style/ContentView.scss
+++ b/src/style/ContentView.scss
@@ -6,8 +6,9 @@
 }
 
 .contentView{
-  height:100%;
+  height:calc(100% );
   width:calc(100%);
+  border-left:$tableBorder;
 
   .p-dataview{
     height:100%;
@@ -36,6 +37,11 @@
     }
 
     .p-dataview-content{
+      *::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 3px rgba(40,40,40,0.9);
+        border: $cardBorder;
+      }
+
       height:100%;
       width:100%;
 
@@ -73,16 +79,19 @@
 
         // grid
         .cgb-0{
-          margin-left:5px;
-          margin-bottom:2px;
+          margin-left:6px;
+          margin-top:6px;
           *{
             animation-name: example!important;
             animation-duration: .16s!important;
           }
           .cgb-loading{
-            outline: $tableBorder;
+            outline: $cardBorder;
             
             .cgb-0-txt{
+
+
+
               width: 100%;
               overflow-y:auto;
               overflow-x:hidden;
@@ -94,7 +103,7 @@
             }
             .cgb-0-info{
               width: 100%;
-              border-top: $tableBorder;
+              border-top: $cardBorder;
               overflow:hidden;
               white-space: nowrap;
             }
@@ -103,9 +112,14 @@
           .cgb-loaded{
             border-collapse: collapse;
             animation-duration: 0s!important;
-            outline: $tableBorder;
-
+            outline: $cardBorder;
+              *::-webkit-scrollbar-track {
+                box-shadow: inset 0 0 3px rgba(40,40,40,0.9);
+                border:0;
+                border-left: $cardBorder;
+              }
             .cgb-0-txt{
+
               width: 100%;
               overflow-y:auto;
               overflow-x:hidden;
@@ -119,7 +133,7 @@
             }
 
             .cgb-0-info{
-              border-top: $tableBorder;
+              border-top: $cardBorder;
               overflow:hidden;
               white-space: nowrap;
               .file_path{
