--- a/src/style/MixtapeView.scss
+++ b/src/style/MixtapeView.scss
@@ -4,62 +4,68 @@
   from {opacity: 0;}
   to {opacity: 1;}
 }
-.mixtapeView{
-  height:calc(100%);
-  width:calc(100% - 1px);
-  border-top: 1px solid var(--border-primary);
-  border-right: $tableBorder;
+.mixtape-pane{
+    border: $tableBorder;
+    height:calc(100% - var(--size-margin));
+    max-width:calc(100% - var(--size-margin));
+    margin: var(--box-margin);
+    margin-top: 0px;
 
-  .p-dataview{
+  .mixtapeView{
     height:calc(100%);
-    width:100%;
+    width:calc(100%);
 
-    .p-dataview-content{
-      height:100%;
+    .p-dataview{
+      height:calc(100%);
       width:100%;
 
-      .grid{
-
+      .p-dataview-content{
+        height:100%;
         width:100%;
-        max-height:calc(100% - 16px);
-        overflow-y:auto;
-        overflow-x:hidden;
 
-        .dgb-0:last-child{
-          margin-bottom:40px;
-        }
-        .dgb-0{
-          position: relative;
-          background: rgba(255, 255, 255, 0.05);
-          backdrop-filter: blur(5px);
-          cursor: pointer;
-          height:34px;
-          overflow:hidden;
-          border-bottom: $tableBorder;
+        .grid{
+
           width:100%;
-          min-width:90px;
-          margin:0;
-          white-space: nowrap;
+          max-height:calc(100% - 16px);
+          overflow-y:auto;
+          overflow-x:hidden;
 
-          .dgb-0-txt{
+          .dgb-0:last-child{
+            margin-bottom:40px;
+          }
+          .dgb-0{
+            position: relative;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(5px);
             cursor: pointer;
+            height:34px;
+            overflow:hidden;
+            border-bottom: $tableBorder;
             width:100%;
-            padding:0;
-            margin: 0;
-            border:0;
-            user-select: none;
-            background:none;
-            .descr{
-              color:var(--text-descr);
-            }
+            min-width:90px;
+            margin:0;
+            white-space: nowrap;
 
-            a{
-              color:var(--link-visited);
-              font-size:1em;
-              text-align:left;
-              white-space: nowrap;
-              overflow: hidden;
-              text-overflow: ellipsis;
+            .dgb-0-txt{
+              cursor: pointer;
+              width:100%;
+              padding:0;
+              margin: 0;
+              border:0;
+              user-select: none;
+              background:none;
+              .descr{
+                color:var(--text-descr);
+              }
+
+              a{
+                color:var(--link-visited);
+                font-size:1em;
+                text-align:left;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+              }
             }
           }
         }
