--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,3 +1,4 @@
+
 .theme-dark {
   --background-primary: #000;
   --link: rgba(194, 194, 73, 0.973);
@@ -5,10 +6,14 @@
   --text-primary: #dfdfdfd3;
   --text-descr: rgba(223, 223, 223, 0.7);
   --color-scheme: dark;
-  --border-primary: #676776;
-  --border-secondary: #696967;
+  --border-primary: #474756;
+  --border-card: #676776d5;
+  --border-secondary: #69696755;
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
+  --scrollbar: #676776af;
+  --size-margin: 16px;
+  --box-margin: 8px;
 }
 .theme-light {
   --background-primary: rgb(255, 255, 255);
@@ -22,4 +27,7 @@
   --border-secondary: #000;
   --input-color: rgba(023, 023, 023, 0.5);
   --splitter-box: purple;
+  --scrollbar: #53535375;
+  --size-margin: 16px;
+  --box-margin: 8px;
 }
