--- a/src/style/MixtapeView.scss
+++ b/src/style/MixtapeView.scss
@@ -26,7 +26,7 @@
         .grid{
 
           width:100%;
-          max-height:calc(100% - 16px);
+          max-height:calc(100% );
           overflow-y:auto;
           overflow-x:hidden;
 
@@ -56,11 +56,12 @@
               background:none;
               .descr{
                 color:var(--text-descr);
+                font-size:14px;
               }
 
               a{
                 color:var(--link-visited);
-                font-size:1em;
+                font-size:16px;
                 text-align:left;
                 white-space: nowrap;
                 overflow: hidden;
