--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -6,14 +6,14 @@
   --text-primary: #dfdfdfd3;
   --text-descr: rgba(223, 223, 223, 0.7);
   --color-scheme: dark;
-  --border-primary: #474756;
-  --border-card: #676776d5;
-  --border-secondary: #69696755;
+  --border-primary: #575766;
+  --border-card: #474756;
+  --border-secondary: #696967;
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
-  --scrollbar: #676776af;
-  --size-margin: 16px;
-  --box-margin: 8px;
+  --scrollbar:  #474756;
+  --size-margin: 14px;
+  --box-margin: 7px;
 }
 .theme-light {
   --background-primary: rgb(255, 255, 255);
