adding info and add content tabs/menu also adding type declerations for all api returns

--- a/src/style/Canvas.scss
+++ b/src/style/Canvas.scss
@@ -4,7 +4,7 @@
   width:calc(100% - var(--size-margin));
   max-width:calc(100% - var(--size-margin));
   margin: var(--box-margin);
-  margin-bottom: 0px;
+  margin-top: 0px;
   outline: $tableBorder;
   overflow:hidden;
 
@@ -22,7 +22,7 @@
   margin: var(--box-margin);
   margin-top: 0px;
   margin-left: calc(var(--box-margin));
-  border: $tableBorder;
+  outline: $tableBorder;
 
 
   div{ 
