--- a/src/style/MixtapeView.scss
+++ b/src/style/MixtapeView.scss
@@ -5,7 +5,7 @@
   to {opacity: 1;}
 }
 .mixtape-pane{
-    border: $tableBorder;
+    outline: $tableBorder;
     height:calc(100% - var(--size-margin));
     max-width:calc(100% - var(--size-margin));
     margin: var(--box-margin);
@@ -38,7 +38,7 @@
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(5px);
             cursor: pointer;
-            height:34px;
+            height:36px;
             overflow:hidden;
             border-bottom: $tableBorder;
             width:100%;
@@ -56,7 +56,7 @@
               background:none;
               .descr{
                 color:var(--text-descr);
-                font-size:14px;
+                font-size:12px;
               }
 
               a{
