--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -2,7 +2,7 @@
 .theme-dark {
   --background-primary: #000;
   --link: rgba(194, 194, 73, 0.973);
-  --link-visited: #aae574;
+  --link-visited: #bbe574;
   --text-primary: #dfdfdfd3;
   --text-descr: rgba(223, 223, 223, 0.7);
   --color-scheme: dark;
@@ -12,8 +12,8 @@
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
   --scrollbar:  #474756;
-  --size-margin: 14px;
-  --box-margin: 7px;
+  --size-margin: 8px;
+  --box-margin: 4px;
 }
 .theme-light {
   --background-primary: rgb(255, 255, 255);
@@ -28,6 +28,6 @@
   --input-color: rgba(023, 023, 023, 0.5);
   --splitter-box: purple;
   --scrollbar: #53535375;
-  --size-margin: 16px;
-  --box-margin: 8px;
+  --size-margin: 8px;
+  --box-margin: 4px;
 }
