--- a/src/style/MixtapeView.scss
+++ b/src/style/MixtapeView.scss
@@ -60,7 +60,7 @@
               }
 
               a{
-                color:var(--link-visited);
+                color:var(--text-header);
                 font-size:16px;
                 text-align:left;
                 white-space: nowrap;
