--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -41,13 +41,13 @@ html, body {
           border-bottom:1px solid var(--border-primary);
           display:flex;
           a {
-            color: var(--input-color)
+            color: var(--text-menu)
           }
           a:link {
-            color:  var(--link)
+            color:  var(--text-menu)
           }
           a:visited {
-           color:  var(--link)
+           color: var(--text-menu)
           }
           .navItem{
             text-align: center;
@@ -68,9 +68,9 @@ html, body {
           width:100%;
           height:16px;
           select {
-             -webkit-appearance: none;
- -moz-appearance: none;
- appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
             overflow:hidden;
             flex-grow: 1;
             font-size:14px;
@@ -80,18 +80,22 @@ html, body {
             box-shadow: none;
             height:calc($navH);
             -webkit-border-radius:0px;
-            color: var(--input-color)
+            color: var(--text-menu)
           }
           select option:checked {
             background-color: #d6d006 !important; /* for IE */
           }
           input {
+            width:33%;
             max-width:33%;
             font-size:14px;
             flex-grow:1;
             border:0;
             background-color: rgba(0,0,0,0);
             outline:0;
+          }
+          ::placeholder {
+            color: var(--text-menu)
           }
           .navItem{
             width:33%;
@@ -106,7 +110,7 @@ html, body {
 
       .loading {
         a {
-        color:  var(--link);
+        color:  var(--text-menu);
           position: absolute;
           top: 50%;
           left: 50%;
@@ -121,12 +125,6 @@ html, body {
         .data_pane{
           height:calc(100% - 261px - (var(--box-margin) * 4)
         }
-      }
-      a:link {
-        color:  var(--link)
-      }
-      a:visited {
-        color:  var(--link-visited)
       }
     }
 }
