--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,16 +1,26 @@
 
 .theme-dark {
-  --background-primary: #000;
-  --link: rgba(194, 194, 73, 0.973);
-  --link-visited: #bbe574;
+  --background-primary: #07070a;
+  ;
+
   --text-primary: #dfdfdfd3;
-  --text-descr: rgba(223, 223, 223, 0.7);
+  --text-header: #bbe574;
+  --text-descr: #bbe57480;
+  --text-data: rgba(223, 223, 223, 0.8);
+  --text-menu: #ffff80;
+  ;
+  ;
+
+  --text-link: rgba(194, 194, 73, 0.973);
+  --text-link-visited: #bbe574;
+
   --color-scheme: dark;
   --border-primary: #575766;
   --border-card: #474756;
   --border-secondary: #696967;
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
+
   --scrollbar:  #474756;
   --size-margin: 8px;
   --box-margin: 4px;
