--- a/src/style/WebKit.scss
+++ b/src/style/WebKit.scss
@@ -3,15 +3,19 @@
   -webkit-text-size-adjust: 100%;
 }
 *::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 3px rgba(40,40,40,0.9);
+  max-width:var(--size-margin);
+  box-shadow: inset 0 0 3px rgba(0,0,0,0.9);
   border-left: $tableBorder;
 }
 *::-webkit-scrollbar-thumb {
+
+  max-width:var(--size-margin);
   background-color: var(--scrollbar);
-    border: 7.3px solid transparent;
     background-clip: content-box;
 
 }
 *::-webkit-scrollbar {
+
+  max-width:var(--size-margin);
   background-color: var(--background-primary); 
 }
