--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,4 +1,3 @@
-
 .theme-dark {
   --background-primary: black;
 
@@ -18,9 +17,9 @@
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
 
-  --scrollbar:  #474756;
-  --size-margin: 4px;
-  --box-margin: 2px;
+  --scrollbar: #bbe57477;
+  --size-margin: 6px;
+  --box-margin: 3px;
 }
 .theme-light {
   --background-primary: rgb(230, 230, 230);
