--- a/src/style/WebKit.scss
+++ b/src/style/WebKit.scss
@@ -4,18 +4,15 @@
 }
 *::-webkit-scrollbar-track {
   max-width:var(--size-margin);
-  box-shadow: inset 0 0 3px rgba(0,0,0,0.9);
   border-left: $tableBorder;
 }
 *::-webkit-scrollbar-thumb {
-
   max-width:var(--size-margin);
   background-color: var(--scrollbar);
-    background-clip: content-box;
+  background-clip: content-box;
 
 }
 *::-webkit-scrollbar {
-
-  max-width:var(--size-margin);
-  background-color: var(--background-primary); 
+  max-width:var(--size-margin)!important;
+  background-color: var(--background-primary);
 }
