--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -17,7 +17,7 @@
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
 
-  --scrollbar: #bbe57477;
+  --scrollbar: #bbe574;
   --size-margin: 6px;
   --box-margin: 3px;
 }
